--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,16 @@
     gap: 20px;
     object-fit: cover;
   }
+
+  input {
+    width: 360px;
+    height: 40px;
+    border: 1px solid #808080;
+    border-radius: 4px;
+  font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #2e2f42;
+padding-left: 16px;
+}
